--- a/cn.zh-cn/API参考/上报事件.md
+++ b/cn.zh-cn/API参考/上报事件.md
@@ -6,22 +6,22 @@
 
 ## URI<a name="section466795818180"></a>
 
--   URI格式
-
-    POST /V1.0/\{project\_id\}/events
+POST /V1.0/\{project\_id\}/events
 
 -   参数说明
 
+    **表 1**  参数说明
+
     <a name="table968175851812"></a>
-    <table><thead align="left"><tr id="row773175951818"><th class="cellrowborder" valign="top" width="24.36235708003518%" id="mcps1.1.3.1.1"><p id="p67318593183"><a name="p67318593183"></a><a name="p67318593183"></a>名称</p>
+    <table><thead align="left"><tr id="row773175951818"><th class="cellrowborder" valign="top" width="24.36235708003518%" id="mcps1.2.3.1.1"><p id="p67318593183"><a name="p67318593183"></a><a name="p67318593183"></a>名称</p>
     </th>
-    <th class="cellrowborder" valign="top" width="75.63764291996482%" id="mcps1.1.3.1.2"><p id="p5731559181818"><a name="p5731559181818"></a><a name="p5731559181818"></a>说明</p>
+    <th class="cellrowborder" valign="top" width="75.63764291996482%" id="mcps1.2.3.1.2"><p id="p5731559181818"><a name="p5731559181818"></a><a name="p5731559181818"></a>说明</p>
     </th>
     </tr>
     </thead>
-    <tbody><tr id="row07325991818"><td class="cellrowborder" valign="top" width="24.36235708003518%" headers="mcps1.1.3.1.1 "><p id="p147311599186"><a name="p147311599186"></a><a name="p147311599186"></a>project_id</p>
+    <tbody><tr id="row07325991818"><td class="cellrowborder" valign="top" width="24.36235708003518%" headers="mcps1.2.3.1.1 "><p id="p147311599186"><a name="p147311599186"></a><a name="p147311599186"></a>project_id</p>
     </td>
-    <td class="cellrowborder" valign="top" width="75.63764291996482%" headers="mcps1.1.3.1.2 "><p id="p8738593188"><a name="p8738593188"></a><a name="p8738593188"></a>项目编号。</p>
+    <td class="cellrowborder" valign="top" width="75.63764291996482%" headers="mcps1.2.3.1.2 "><p id="p8738593188"><a name="p8738593188"></a><a name="p8738593188"></a>项目编号。</p>
     </td>
     </tr>
     </tbody>
@@ -32,125 +32,127 @@
     /V1.0/\{project\_id\}/events
 
 
-## 请求<a name="section16971858161816"></a>
+## 请求消息<a name="section16971858161816"></a>
 
--   要素说明
+-   请求参数
+
+    **表 2**  请求参数
 
     <a name="table3736458191816"></a>
-    <table><thead align="left"><tr id="row1674165961815"><th class="cellrowborder" valign="top" width="15%" id="mcps1.1.5.1.1"><p id="p774759181818"><a name="p774759181818"></a><a name="p774759181818"></a>名称</p>
+    <table><thead align="left"><tr id="row1674165961815"><th class="cellrowborder" valign="top" width="15%" id="mcps1.2.5.1.1"><p id="p774759181818"><a name="p774759181818"></a><a name="p774759181818"></a>名称</p>
     </th>
-    <th class="cellrowborder" valign="top" width="14.000000000000002%" id="mcps1.1.5.1.2"><p id="p57435981816"><a name="p57435981816"></a><a name="p57435981816"></a>是否必选</p>
+    <th class="cellrowborder" valign="top" width="14.000000000000002%" id="mcps1.2.5.1.2"><p id="p57435981816"><a name="p57435981816"></a><a name="p57435981816"></a>是否必选</p>
     </th>
-    <th class="cellrowborder" valign="top" width="16%" id="mcps1.1.5.1.3"><p id="p274759201818"><a name="p274759201818"></a><a name="p274759201818"></a>参数类型</p>
+    <th class="cellrowborder" valign="top" width="16%" id="mcps1.2.5.1.3"><p id="p274759201818"><a name="p274759201818"></a><a name="p274759201818"></a>参数类型</p>
     </th>
-    <th class="cellrowborder" valign="top" width="55.00000000000001%" id="mcps1.1.5.1.4"><p id="p4741759141819"><a name="p4741759141819"></a><a name="p4741759141819"></a>说明</p>
+    <th class="cellrowborder" valign="top" width="55.00000000000001%" id="mcps1.2.5.1.4"><p id="p4741759141819"><a name="p4741759141819"></a><a name="p4741759141819"></a>说明</p>
     </th>
     </tr>
     </thead>
-    <tbody><tr id="row1974125911814"><td class="cellrowborder" valign="top" width="15%" headers="mcps1.1.5.1.1 "><p id="p18289164174513"><a name="p18289164174513"></a><a name="p18289164174513"></a>event_name</p>
+    <tbody><tr id="row1974125911814"><td class="cellrowborder" valign="top" width="15%" headers="mcps1.2.5.1.1 "><p id="p18289164174513"><a name="p18289164174513"></a><a name="p18289164174513"></a>event_name</p>
     </td>
-    <td class="cellrowborder" valign="top" width="14.000000000000002%" headers="mcps1.1.5.1.2 "><p id="p177425911812"><a name="p177425911812"></a><a name="p177425911812"></a>是</p>
+    <td class="cellrowborder" valign="top" width="14.000000000000002%" headers="mcps1.2.5.1.2 "><p id="p177425911812"><a name="p177425911812"></a><a name="p177425911812"></a>是</p>
     </td>
-    <td class="cellrowborder" valign="top" width="16%" headers="mcps1.1.5.1.3 "><p id="p1674115918189"><a name="p1674115918189"></a><a name="p1674115918189"></a>字符串</p>
+    <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.5.1.3 "><p id="p1674115918189"><a name="p1674115918189"></a><a name="p1674115918189"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="55.00000000000001%" headers="mcps1.1.5.1.4 "><p id="p8741959191810"><a name="p8741959191810"></a><a name="p8741959191810"></a>事件名称。</p>
+    <td class="cellrowborder" valign="top" width="55.00000000000001%" headers="mcps1.2.5.1.4 "><p id="p8741959191810"><a name="p8741959191810"></a><a name="p8741959191810"></a>事件名称。</p>
     <p id="p106265144614"><a name="p106265144614"></a><a name="p106265144614"></a>必须以字母开头，只能包含0-9/a-z/A-Z/_，长度最短为1，最大为64。</p>
     </td>
     </tr>
-    <tr id="row18741759121812"><td class="cellrowborder" valign="top" width="15%" headers="mcps1.1.5.1.1 "><p id="p574185991810"><a name="p574185991810"></a><a name="p574185991810"></a>event_source</p>
+    <tr id="row18741759121812"><td class="cellrowborder" valign="top" width="15%" headers="mcps1.2.5.1.1 "><p id="p574185991810"><a name="p574185991810"></a><a name="p574185991810"></a>event_source</p>
     </td>
-    <td class="cellrowborder" valign="top" width="14.000000000000002%" headers="mcps1.1.5.1.2 "><p id="p37412599182"><a name="p37412599182"></a><a name="p37412599182"></a>否</p>
+    <td class="cellrowborder" valign="top" width="14.000000000000002%" headers="mcps1.2.5.1.2 "><p id="p37412599182"><a name="p37412599182"></a><a name="p37412599182"></a>否</p>
     </td>
-    <td class="cellrowborder" valign="top" width="16%" headers="mcps1.1.5.1.3 "><p id="p552994614611"><a name="p552994614611"></a><a name="p552994614611"></a>字符串</p>
+    <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.5.1.3 "><p id="p552994614611"><a name="p552994614611"></a><a name="p552994614611"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="55.00000000000001%" headers="mcps1.1.5.1.4 "><p id="p1274165911813"><a name="p1274165911813"></a><a name="p1274165911813"></a>事件来源。</p>
+    <td class="cellrowborder" valign="top" width="55.00000000000001%" headers="mcps1.2.5.1.4 "><p id="p1274165911813"><a name="p1274165911813"></a><a name="p1274165911813"></a>事件来源。</p>
     <p id="p15543145912461"><a name="p15543145912461"></a><a name="p15543145912461"></a>格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，总长度最短为3，最大为32。</p>
     </td>
     </tr>
-    <tr id="row77425951819"><td class="cellrowborder" valign="top" width="15%" headers="mcps1.1.5.1.1 "><p id="p17768203574712"><a name="p17768203574712"></a><a name="p17768203574712"></a>time</p>
+    <tr id="row77425951819"><td class="cellrowborder" valign="top" width="15%" headers="mcps1.2.5.1.1 "><p id="p17768203574712"><a name="p17768203574712"></a><a name="p17768203574712"></a>time</p>
     </td>
-    <td class="cellrowborder" valign="top" width="14.000000000000002%" headers="mcps1.1.5.1.2 "><p id="p137415598189"><a name="p137415598189"></a><a name="p137415598189"></a>是</p>
+    <td class="cellrowborder" valign="top" width="14.000000000000002%" headers="mcps1.2.5.1.2 "><p id="p137415598189"><a name="p137415598189"></a><a name="p137415598189"></a>是</p>
     </td>
-    <td class="cellrowborder" valign="top" width="16%" headers="mcps1.1.5.1.3 "><p id="p207485951813"><a name="p207485951813"></a><a name="p207485951813"></a>整数</p>
+    <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.5.1.3 "><p id="p207485951813"><a name="p207485951813"></a><a name="p207485951813"></a>整数</p>
     </td>
-    <td class="cellrowborder" valign="top" width="55.00000000000001%" headers="mcps1.1.5.1.4 "><p id="p47415981815"><a name="p47415981815"></a><a name="p47415981815"></a>事件发生时间。UNIX时间戳，单位毫秒。</p>
+    <td class="cellrowborder" valign="top" width="55.00000000000001%" headers="mcps1.2.5.1.4 "><p id="p47415981815"><a name="p47415981815"></a><a name="p47415981815"></a>事件发生时间。UNIX时间戳，单位毫秒。</p>
     <div class="note" id="note8502115254914"><a name="note8502115254914"></a><a name="note8502115254914"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p1050315220496"><a name="p1050315220496"></a><a name="p1050315220496"></a>因为客户端到服务器端有延时，因此插入数据的时间戳应该在[当前时间-1小时+20秒，当前时间+10分钟-20秒]区间内，保证到达服务器时不会因为传输时延造成数据不能插入数据库。</p>
     </div></div>
     </td>
     </tr>
-    <tr id="row154242222184"><td class="cellrowborder" valign="top" width="15%" headers="mcps1.1.5.1.1 "><p id="p8426722131811"><a name="p8426722131811"></a><a name="p8426722131811"></a>detail</p>
+    <tr id="row154242222184"><td class="cellrowborder" valign="top" width="15%" headers="mcps1.2.5.1.1 "><p id="p8426722131811"><a name="p8426722131811"></a><a name="p8426722131811"></a>detail</p>
     </td>
-    <td class="cellrowborder" valign="top" width="14.000000000000002%" headers="mcps1.1.5.1.2 "><p id="p2426102271819"><a name="p2426102271819"></a><a name="p2426102271819"></a>是</p>
+    <td class="cellrowborder" valign="top" width="14.000000000000002%" headers="mcps1.2.5.1.2 "><p id="p2426102271819"><a name="p2426102271819"></a><a name="p2426102271819"></a>是</p>
     </td>
-    <td class="cellrowborder" valign="top" width="16%" headers="mcps1.1.5.1.3 "><p id="p1426022171816"><a name="p1426022171816"></a><a name="p1426022171816"></a>object</p>
+    <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.5.1.3 "><p id="p1426022171816"><a name="p1426022171816"></a><a name="p1426022171816"></a>object</p>
     </td>
-    <td class="cellrowborder" valign="top" width="55.00000000000001%" headers="mcps1.1.5.1.4 "><p id="p3426622181814"><a name="p3426622181814"></a><a name="p3426622181814"></a>事件详情。</p>
-    </td>
-    </tr>
-    <tr id="row674165951819"><td class="cellrowborder" valign="top" width="15%" headers="mcps1.1.5.1.1 "><p id="p7577931105015"><a name="p7577931105015"></a><a name="p7577931105015"></a>content</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="14.000000000000002%" headers="mcps1.1.5.1.2 "><p id="p47965431509"><a name="p47965431509"></a><a name="p47965431509"></a>否</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="16%" headers="mcps1.1.5.1.3 "><p id="p9742593182"><a name="p9742593182"></a><a name="p9742593182"></a>字符串</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="55.00000000000001%" headers="mcps1.1.5.1.4 "><p id="p27435916189"><a name="p27435916189"></a><a name="p27435916189"></a>事件内容，最大长度4096。</p>
+    <td class="cellrowborder" valign="top" width="55.00000000000001%" headers="mcps1.2.5.1.4 "><p id="p3426622181814"><a name="p3426622181814"></a><a name="p3426622181814"></a>事件详情。</p>
     </td>
     </tr>
-    <tr id="row127418595186"><td class="cellrowborder" valign="top" width="15%" headers="mcps1.1.5.1.1 "><p id="p1853113145512"><a name="p1853113145512"></a><a name="p1853113145512"></a>group_id</p>
+    <tr id="row674165951819"><td class="cellrowborder" valign="top" width="15%" headers="mcps1.2.5.1.1 "><p id="p7577931105015"><a name="p7577931105015"></a><a name="p7577931105015"></a>content</p>
     </td>
-    <td class="cellrowborder" valign="top" width="14.000000000000002%" headers="mcps1.1.5.1.2 "><p id="p187485915182"><a name="p187485915182"></a><a name="p187485915182"></a>否</p>
+    <td class="cellrowborder" valign="top" width="14.000000000000002%" headers="mcps1.2.5.1.2 "><p id="p47965431509"><a name="p47965431509"></a><a name="p47965431509"></a>否</p>
     </td>
-    <td class="cellrowborder" valign="top" width="16%" headers="mcps1.1.5.1.3 "><p id="p174459101817"><a name="p174459101817"></a><a name="p174459101817"></a>字符串</p>
+    <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.5.1.3 "><p id="p9742593182"><a name="p9742593182"></a><a name="p9742593182"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="55.00000000000001%" headers="mcps1.1.5.1.4 "><p id="p1274459111812"><a name="p1274459111812"></a><a name="p1274459111812"></a>所属分组。</p>
+    <td class="cellrowborder" valign="top" width="55.00000000000001%" headers="mcps1.2.5.1.4 "><p id="p27435916189"><a name="p27435916189"></a><a name="p27435916189"></a>事件内容，最大长度4096。</p>
+    </td>
+    </tr>
+    <tr id="row127418595186"><td class="cellrowborder" valign="top" width="15%" headers="mcps1.2.5.1.1 "><p id="p1853113145512"><a name="p1853113145512"></a><a name="p1853113145512"></a>group_id</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="14.000000000000002%" headers="mcps1.2.5.1.2 "><p id="p187485915182"><a name="p187485915182"></a><a name="p187485915182"></a>否</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.5.1.3 "><p id="p174459101817"><a name="p174459101817"></a><a name="p174459101817"></a>字符串</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="55.00000000000001%" headers="mcps1.2.5.1.4 "><p id="p1274459111812"><a name="p1274459111812"></a><a name="p1274459111812"></a>所属分组。</p>
     <p id="p1311871519533"><a name="p1311871519533"></a><a name="p1311871519533"></a>资源分组对应的ID，必须传存在的分组ID。</p>
     </td>
     </tr>
-    <tr id="row574135914186"><td class="cellrowborder" valign="top" width="15%" headers="mcps1.1.5.1.1 "><p id="p11164153620533"><a name="p11164153620533"></a><a name="p11164153620533"></a>resource_id</p>
+    <tr id="row574135914186"><td class="cellrowborder" valign="top" width="15%" headers="mcps1.2.5.1.1 "><p id="p11164153620533"><a name="p11164153620533"></a><a name="p11164153620533"></a>resource_id</p>
     </td>
-    <td class="cellrowborder" valign="top" width="14.000000000000002%" headers="mcps1.1.5.1.2 "><p id="p6393142845618"><a name="p6393142845618"></a><a name="p6393142845618"></a>否</p>
+    <td class="cellrowborder" valign="top" width="14.000000000000002%" headers="mcps1.2.5.1.2 "><p id="p6393142845618"><a name="p6393142845618"></a><a name="p6393142845618"></a>否</p>
     </td>
-    <td class="cellrowborder" valign="top" width="16%" headers="mcps1.1.5.1.3 "><p id="p1751959141810"><a name="p1751959141810"></a><a name="p1751959141810"></a>字符串</p>
+    <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.5.1.3 "><p id="p1751959141810"><a name="p1751959141810"></a><a name="p1751959141810"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="55.00000000000001%" headers="mcps1.1.5.1.4 "><p id="p15756592182"><a name="p15756592182"></a><a name="p15756592182"></a>资源ID，支持字母、数字_ -：，最大长度128。</p>
-    </td>
-    </tr>
-    <tr id="row7751059151813"><td class="cellrowborder" valign="top" width="15%" headers="mcps1.1.5.1.1 "><p id="p1675185981819"><a name="p1675185981819"></a><a name="p1675185981819"></a>resource_name</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="14.000000000000002%" headers="mcps1.1.5.1.2 "><p id="p11396028195613"><a name="p11396028195613"></a><a name="p11396028195613"></a>否</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="16%" headers="mcps1.1.5.1.3 "><p id="p14428946115415"><a name="p14428946115415"></a><a name="p14428946115415"></a>字符串</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="55.00000000000001%" headers="mcps1.1.5.1.4 "><p id="p13751659191810"><a name="p13751659191810"></a><a name="p13751659191810"></a>资源名称，支持字母 中文 数字_ -. ，最大长度128。</p>
+    <td class="cellrowborder" valign="top" width="55.00000000000001%" headers="mcps1.2.5.1.4 "><p id="p15756592182"><a name="p15756592182"></a><a name="p15756592182"></a>资源ID，支持字母、数字_ -：，最大长度128。</p>
     </td>
     </tr>
-    <tr id="row17519598187"><td class="cellrowborder" valign="top" width="15%" headers="mcps1.1.5.1.1 "><p id="p15838745135517"><a name="p15838745135517"></a><a name="p15838745135517"></a>event_state</p>
+    <tr id="row7751059151813"><td class="cellrowborder" valign="top" width="15%" headers="mcps1.2.5.1.1 "><p id="p1675185981819"><a name="p1675185981819"></a><a name="p1675185981819"></a>resource_name</p>
     </td>
-    <td class="cellrowborder" valign="top" width="14.000000000000002%" headers="mcps1.1.5.1.2 "><p id="p102981630155619"><a name="p102981630155619"></a><a name="p102981630155619"></a>否</p>
+    <td class="cellrowborder" valign="top" width="14.000000000000002%" headers="mcps1.2.5.1.2 "><p id="p11396028195613"><a name="p11396028195613"></a><a name="p11396028195613"></a>否</p>
     </td>
-    <td class="cellrowborder" valign="top" width="16%" headers="mcps1.1.5.1.3 "><p id="p17754595186"><a name="p17754595186"></a><a name="p17754595186"></a>字符串</p>
+    <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.5.1.3 "><p id="p14428946115415"><a name="p14428946115415"></a><a name="p14428946115415"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="55.00000000000001%" headers="mcps1.1.5.1.4 "><p id="p1375559121810"><a name="p1375559121810"></a><a name="p1375559121810"></a>事件状态。</p>
+    <td class="cellrowborder" valign="top" width="55.00000000000001%" headers="mcps1.2.5.1.4 "><p id="p13751659191810"><a name="p13751659191810"></a><a name="p13751659191810"></a>资源名称，支持字母 中文 数字_ -. ，最大长度128。</p>
+    </td>
+    </tr>
+    <tr id="row17519598187"><td class="cellrowborder" valign="top" width="15%" headers="mcps1.2.5.1.1 "><p id="p15838745135517"><a name="p15838745135517"></a><a name="p15838745135517"></a>event_state</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="14.000000000000002%" headers="mcps1.2.5.1.2 "><p id="p102981630155619"><a name="p102981630155619"></a><a name="p102981630155619"></a>否</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.5.1.3 "><p id="p17754595186"><a name="p17754595186"></a><a name="p17754595186"></a>字符串</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="55.00000000000001%" headers="mcps1.2.5.1.4 "><p id="p1375559121810"><a name="p1375559121810"></a><a name="p1375559121810"></a>事件状态。</p>
     <p id="p15107163145716"><a name="p15107163145716"></a><a name="p15107163145716"></a>枚举类型：normal\warning\incident</p>
     </td>
     </tr>
-    <tr id="row1075259171818"><td class="cellrowborder" valign="top" width="15%" headers="mcps1.1.5.1.1 "><p id="p97535919181"><a name="p97535919181"></a><a name="p97535919181"></a>event_level</p>
+    <tr id="row1075259171818"><td class="cellrowborder" valign="top" width="15%" headers="mcps1.2.5.1.1 "><p id="p97535919181"><a name="p97535919181"></a><a name="p97535919181"></a>event_level</p>
     </td>
-    <td class="cellrowborder" valign="top" width="14.000000000000002%" headers="mcps1.1.5.1.2 "><p id="p13302143025613"><a name="p13302143025613"></a><a name="p13302143025613"></a>否</p>
+    <td class="cellrowborder" valign="top" width="14.000000000000002%" headers="mcps1.2.5.1.2 "><p id="p13302143025613"><a name="p13302143025613"></a><a name="p13302143025613"></a>否</p>
     </td>
-    <td class="cellrowborder" valign="top" width="16%" headers="mcps1.1.5.1.3 "><p id="p19768599188"><a name="p19768599188"></a><a name="p19768599188"></a>字符串</p>
+    <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.5.1.3 "><p id="p19768599188"><a name="p19768599188"></a><a name="p19768599188"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="55.00000000000001%" headers="mcps1.1.5.1.4 "><p id="p147655911182"><a name="p147655911182"></a><a name="p147655911182"></a>事件级别。</p>
+    <td class="cellrowborder" valign="top" width="55.00000000000001%" headers="mcps1.2.5.1.4 "><p id="p147655911182"><a name="p147655911182"></a><a name="p147655911182"></a>事件级别。</p>
     <p id="p1886315175717"><a name="p1886315175717"></a><a name="p1886315175717"></a>枚举类型：Critical, Major, Minor, Info</p>
     </td>
     </tr>
-    <tr id="row1761459131813"><td class="cellrowborder" valign="top" width="15%" headers="mcps1.1.5.1.1 "><p id="p16761659181812"><a name="p16761659181812"></a><a name="p16761659181812"></a>event_user</p>
+    <tr id="row1761459131813"><td class="cellrowborder" valign="top" width="15%" headers="mcps1.2.5.1.1 "><p id="p16761659181812"><a name="p16761659181812"></a><a name="p16761659181812"></a>event_user</p>
     </td>
-    <td class="cellrowborder" valign="top" width="14.000000000000002%" headers="mcps1.1.5.1.2 "><p id="p20953123295613"><a name="p20953123295613"></a><a name="p20953123295613"></a>否</p>
+    <td class="cellrowborder" valign="top" width="14.000000000000002%" headers="mcps1.2.5.1.2 "><p id="p20953123295613"><a name="p20953123295613"></a><a name="p20953123295613"></a>否</p>
     </td>
-    <td class="cellrowborder" valign="top" width="16%" headers="mcps1.1.5.1.3 "><p id="p1576135916182"><a name="p1576135916182"></a><a name="p1576135916182"></a>字符串</p>
+    <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.5.1.3 "><p id="p1576135916182"><a name="p1576135916182"></a><a name="p1576135916182"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="55.00000000000001%" headers="mcps1.1.5.1.4 "><p id="p777195910189"><a name="p777195910189"></a><a name="p777195910189"></a>事件用户。</p>
+    <td class="cellrowborder" valign="top" width="55.00000000000001%" headers="mcps1.2.5.1.4 "><p id="p777195910189"><a name="p777195910189"></a><a name="p777195910189"></a>事件用户。</p>
     <p id="p3679173015571"><a name="p3679173015571"></a><a name="p3679173015571"></a>支持字母 数字_ -/空格 ，最大长度64。</p>
     </td>
     </tr>
@@ -191,41 +193,40 @@
     }]
     ```
 
-    >![](public_sys-resources/icon-note.gif) **说明：**   
-    >错误码说明请参见[返回错误码说明](返回错误码说明.md)。  
 
+## 响应消息<a name="section3695195811812"></a>
 
-## 响应<a name="section3695195811812"></a>
+-   响应参数
 
--   要素说明
+    **表 3**  响应参数
 
     <a name="table7651809184830"></a>
-    <table><thead align="left"><tr id="row11265298184830"><th class="cellrowborder" valign="top" width="17.02%" id="mcps1.1.5.1.1"><p id="p40073906184830"><a name="p40073906184830"></a><a name="p40073906184830"></a>名称</p>
+    <table><thead align="left"><tr id="row11265298184830"><th class="cellrowborder" valign="top" width="17.02%" id="mcps1.2.5.1.1"><p id="p40073906184830"><a name="p40073906184830"></a><a name="p40073906184830"></a>名称</p>
     </th>
-    <th class="cellrowborder" valign="top" width="14.180000000000001%" id="mcps1.1.5.1.2"><p id="p24760926184830"><a name="p24760926184830"></a><a name="p24760926184830"></a>是否必选</p>
+    <th class="cellrowborder" valign="top" width="14.180000000000001%" id="mcps1.2.5.1.2"><p id="p24760926184830"><a name="p24760926184830"></a><a name="p24760926184830"></a>是否必选</p>
     </th>
-    <th class="cellrowborder" valign="top" width="12.82%" id="mcps1.1.5.1.3"><p id="p59478015184830"><a name="p59478015184830"></a><a name="p59478015184830"></a>参数类型</p>
+    <th class="cellrowborder" valign="top" width="12.82%" id="mcps1.2.5.1.3"><p id="p59478015184830"><a name="p59478015184830"></a><a name="p59478015184830"></a>参数类型</p>
     </th>
-    <th class="cellrowborder" valign="top" width="55.98%" id="mcps1.1.5.1.4"><p id="p52989949184830"><a name="p52989949184830"></a><a name="p52989949184830"></a>说明</p>
+    <th class="cellrowborder" valign="top" width="55.98%" id="mcps1.2.5.1.4"><p id="p52989949184830"><a name="p52989949184830"></a><a name="p52989949184830"></a>说明</p>
     </th>
     </tr>
     </thead>
-    <tbody><tr id="row64327487184830"><td class="cellrowborder" valign="top" width="17.02%" headers="mcps1.1.5.1.1 "><p id="p99051018912"><a name="p99051018912"></a><a name="p99051018912"></a>event_id</p>
+    <tbody><tr id="row64327487184830"><td class="cellrowborder" valign="top" width="17.02%" headers="mcps1.2.5.1.1 "><p id="p99051018912"><a name="p99051018912"></a><a name="p99051018912"></a>event_id</p>
     </td>
-    <td class="cellrowborder" valign="top" width="14.180000000000001%" headers="mcps1.1.5.1.2 "><p id="p5001649184830"><a name="p5001649184830"></a><a name="p5001649184830"></a>是</p>
+    <td class="cellrowborder" valign="top" width="14.180000000000001%" headers="mcps1.2.5.1.2 "><p id="p5001649184830"><a name="p5001649184830"></a><a name="p5001649184830"></a>是</p>
     </td>
-    <td class="cellrowborder" valign="top" width="12.82%" headers="mcps1.1.5.1.3 "><p id="p2480433184830"><a name="p2480433184830"></a><a name="p2480433184830"></a>字符串</p>
+    <td class="cellrowborder" valign="top" width="12.82%" headers="mcps1.2.5.1.3 "><p id="p2480433184830"><a name="p2480433184830"></a><a name="p2480433184830"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="55.98%" headers="mcps1.1.5.1.4 "><p id="p66697365184830"><a name="p66697365184830"></a><a name="p66697365184830"></a>事件ID。</p>
+    <td class="cellrowborder" valign="top" width="55.98%" headers="mcps1.2.5.1.4 "><p id="p66697365184830"><a name="p66697365184830"></a><a name="p66697365184830"></a>事件ID。</p>
     </td>
     </tr>
-    <tr id="row1136183616448"><td class="cellrowborder" valign="top" width="17.02%" headers="mcps1.1.5.1.1 "><p id="p148048373444"><a name="p148048373444"></a><a name="p148048373444"></a>event_name</p>
+    <tr id="row1136183616448"><td class="cellrowborder" valign="top" width="17.02%" headers="mcps1.2.5.1.1 "><p id="p148048373444"><a name="p148048373444"></a><a name="p148048373444"></a>event_name</p>
     </td>
-    <td class="cellrowborder" valign="top" width="14.180000000000001%" headers="mcps1.1.5.1.2 "><p id="p1280683712444"><a name="p1280683712444"></a><a name="p1280683712444"></a>是</p>
+    <td class="cellrowborder" valign="top" width="14.180000000000001%" headers="mcps1.2.5.1.2 "><p id="p1280683712444"><a name="p1280683712444"></a><a name="p1280683712444"></a>是</p>
     </td>
-    <td class="cellrowborder" valign="top" width="12.82%" headers="mcps1.1.5.1.3 "><p id="p1811123764418"><a name="p1811123764418"></a><a name="p1811123764418"></a>字符串</p>
+    <td class="cellrowborder" valign="top" width="12.82%" headers="mcps1.2.5.1.3 "><p id="p1811123764418"><a name="p1811123764418"></a><a name="p1811123764418"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="55.98%" headers="mcps1.1.5.1.4 "><p id="p198141375444"><a name="p198141375444"></a><a name="p198141375444"></a>事件名称。</p>
+    <td class="cellrowborder" valign="top" width="55.98%" headers="mcps1.2.5.1.4 "><p id="p198141375444"><a name="p198141375444"></a><a name="p198141375444"></a>事件名称。</p>
     <p id="p1781416375446"><a name="p1781416375446"></a><a name="p1781416375446"></a>必须以字母开头，只能包含0-9/a-z/A-Z/_，长度最短为1，最大为64。</p>
     </td>
     </tr>
@@ -302,4 +303,8 @@
     </tbody>
     </table>
 
+
+## 错误码<a name="section282724211478"></a>
+
+请参考[返回错误码说明](返回错误码说明.md)。
 
