--- a/cn.zh-cn/API参考/删除告警规则.md
+++ b/cn.zh-cn/API参考/删除告警规则.md
@@ -6,27 +6,27 @@
 
 ## URI<a name="section4284924220332"></a>
 
--   URI格式
-
-    DELETE /V1.0/\{project\_id\}/alarms/\{alarm\_id\}
+DELETE /V1.0/\{project\_id\}/alarms/\{alarm\_id\}
 
 -   参数说明
 
+    **表 1**  参数说明
+
     <a name="table6195694220332"></a>
-    <table><thead align="left"><tr id="row3240387120332"><th class="cellrowborder" valign="top" width="25.281396231187557%" id="mcps1.1.3.1.1"><p id="p746789920332"><a name="p746789920332"></a><a name="p746789920332"></a>名称</p>
+    <table><thead align="left"><tr id="row3240387120332"><th class="cellrowborder" valign="top" width="25.281396231187557%" id="mcps1.2.3.1.1"><p id="p746789920332"><a name="p746789920332"></a><a name="p746789920332"></a>名称</p>
     </th>
-    <th class="cellrowborder" valign="top" width="74.71860376881246%" id="mcps1.1.3.1.2"><p id="p741760420332"><a name="p741760420332"></a><a name="p741760420332"></a>说明</p>
+    <th class="cellrowborder" valign="top" width="74.71860376881246%" id="mcps1.2.3.1.2"><p id="p741760420332"><a name="p741760420332"></a><a name="p741760420332"></a>说明</p>
     </th>
     </tr>
     </thead>
-    <tbody><tr id="row6395507420332"><td class="cellrowborder" valign="top" width="25.281396231187557%" headers="mcps1.1.3.1.1 "><p id="p1297848020332"><a name="p1297848020332"></a><a name="p1297848020332"></a>project_id</p>
+    <tbody><tr id="row6395507420332"><td class="cellrowborder" valign="top" width="25.281396231187557%" headers="mcps1.2.3.1.1 "><p id="p1297848020332"><a name="p1297848020332"></a><a name="p1297848020332"></a>project_id</p>
     </td>
-    <td class="cellrowborder" valign="top" width="74.71860376881246%" headers="mcps1.1.3.1.2 "><p id="p5776825320332"><a name="p5776825320332"></a><a name="p5776825320332"></a>项目编号。</p>
+    <td class="cellrowborder" valign="top" width="74.71860376881246%" headers="mcps1.2.3.1.2 "><p id="p5776825320332"><a name="p5776825320332"></a><a name="p5776825320332"></a>项目编号。</p>
     </td>
     </tr>
-    <tr id="row52895577203555"><td class="cellrowborder" valign="top" width="25.281396231187557%" headers="mcps1.1.3.1.1 "><p id="p56683338203555"><a name="p56683338203555"></a><a name="p56683338203555"></a>alarm_id</p>
+    <tr id="row52895577203555"><td class="cellrowborder" valign="top" width="25.281396231187557%" headers="mcps1.2.3.1.1 "><p id="p56683338203555"><a name="p56683338203555"></a><a name="p56683338203555"></a>alarm_id</p>
     </td>
-    <td class="cellrowborder" valign="top" width="74.71860376881246%" headers="mcps1.1.3.1.2 "><p id="p49165616203555"><a name="p49165616203555"></a><a name="p49165616203555"></a>告警规则的ID。</p>
+    <td class="cellrowborder" valign="top" width="74.71860376881246%" headers="mcps1.2.3.1.2 "><p id="p49165616203555"><a name="p49165616203555"></a><a name="p49165616203555"></a>告警规则的ID。</p>
     </td>
     </tr>
     </tbody>
@@ -39,15 +39,12 @@
     /V1.0/{project_id}/alarms/al1441967036681YkazZ0deN
     ```
 
-    >![](public_sys-resources/icon-note.gif) **说明：**   
-    >错误码说明请参见[返回错误码说明](返回错误码说明.md)。  
 
-
-## 请求<a name="section1403745820332"></a>
+## 请求消息<a name="section1403745820332"></a>
 
 无请求体
 
-## 响应<a name="section5063939020332"></a>
+## 响应消息<a name="section5063939020332"></a>
 
 无消息体
 
@@ -104,4 +101,8 @@
     </tbody>
     </table>
 
+
+## 错误码<a name="section13819114315466"></a>
+
+请参考[返回错误码说明](返回错误码说明.md)。
 
