--- a/cn.zh-cn/API参考/启停告警规则.md
+++ b/cn.zh-cn/API参考/启停告警规则.md
@@ -6,27 +6,27 @@
 
 ## URI<a name="section4284924220332"></a>
 
--   URI格式
-
-    PUT /V1.0/\{project\_id\}/alarms/\{alarm\_id\}/action
+PUT /V1.0/\{project\_id\}/alarms/\{alarm\_id\}/action
 
 -   参数说明
 
+    **表 1**  参数说明
+
     <a name="table6195694220332"></a>
-    <table><thead align="left"><tr id="row3240387120332"><th class="cellrowborder" valign="top" width="25.281396231187557%" id="mcps1.1.3.1.1"><p id="p746789920332"><a name="p746789920332"></a><a name="p746789920332"></a>名称</p>
+    <table><thead align="left"><tr id="row3240387120332"><th class="cellrowborder" valign="top" width="25.281396231187557%" id="mcps1.2.3.1.1"><p id="p746789920332"><a name="p746789920332"></a><a name="p746789920332"></a>名称</p>
     </th>
-    <th class="cellrowborder" valign="top" width="74.71860376881246%" id="mcps1.1.3.1.2"><p id="p741760420332"><a name="p741760420332"></a><a name="p741760420332"></a>说明</p>
+    <th class="cellrowborder" valign="top" width="74.71860376881246%" id="mcps1.2.3.1.2"><p id="p741760420332"><a name="p741760420332"></a><a name="p741760420332"></a>说明</p>
     </th>
     </tr>
     </thead>
-    <tbody><tr id="row6395507420332"><td class="cellrowborder" valign="top" width="25.281396231187557%" headers="mcps1.1.3.1.1 "><p id="p1297848020332"><a name="p1297848020332"></a><a name="p1297848020332"></a>project_id</p>
+    <tbody><tr id="row6395507420332"><td class="cellrowborder" valign="top" width="25.281396231187557%" headers="mcps1.2.3.1.1 "><p id="p1297848020332"><a name="p1297848020332"></a><a name="p1297848020332"></a>project_id</p>
     </td>
-    <td class="cellrowborder" valign="top" width="74.71860376881246%" headers="mcps1.1.3.1.2 "><p id="p5776825320332"><a name="p5776825320332"></a><a name="p5776825320332"></a>项目编号。</p>
+    <td class="cellrowborder" valign="top" width="74.71860376881246%" headers="mcps1.2.3.1.2 "><p id="p5776825320332"><a name="p5776825320332"></a><a name="p5776825320332"></a>项目编号。</p>
     </td>
     </tr>
-    <tr id="row52895577203555"><td class="cellrowborder" valign="top" width="25.281396231187557%" headers="mcps1.1.3.1.1 "><p id="p56683338203555"><a name="p56683338203555"></a><a name="p56683338203555"></a>alarm_id</p>
+    <tr id="row52895577203555"><td class="cellrowborder" valign="top" width="25.281396231187557%" headers="mcps1.2.3.1.1 "><p id="p56683338203555"><a name="p56683338203555"></a><a name="p56683338203555"></a>alarm_id</p>
     </td>
-    <td class="cellrowborder" valign="top" width="74.71860376881246%" headers="mcps1.1.3.1.2 "><p id="p49165616203555"><a name="p49165616203555"></a><a name="p49165616203555"></a>告警规则的ID。</p>
+    <td class="cellrowborder" valign="top" width="74.71860376881246%" headers="mcps1.2.3.1.2 "><p id="p49165616203555"><a name="p49165616203555"></a><a name="p49165616203555"></a>告警规则的ID。</p>
     </td>
     </tr>
     </tbody>
@@ -40,28 +40,30 @@
     ```
 
 
-## 请求<a name="section1403745820332"></a>
+## 请求消息<a name="section1403745820332"></a>
 
--   参数说明
+-   请求参数
+
+    **表 2**  请求参数
 
     <a name="table2640279820332"></a>
-    <table><thead align="left"><tr id="row4965920620332"><th class="cellrowborder" valign="top" width="30.826917308269174%" id="mcps1.1.5.1.1"><p id="p6297276220332"><a name="p6297276220332"></a><a name="p6297276220332"></a>名称</p>
+    <table><thead align="left"><tr id="row4965920620332"><th class="cellrowborder" valign="top" width="30.826917308269174%" id="mcps1.2.5.1.1"><p id="p6297276220332"><a name="p6297276220332"></a><a name="p6297276220332"></a>名称</p>
     </th>
-    <th class="cellrowborder" valign="top" width="15.978402159784022%" id="mcps1.1.5.1.2"><p id="p52006120332"><a name="p52006120332"></a><a name="p52006120332"></a>是否必选</p>
+    <th class="cellrowborder" valign="top" width="15.978402159784022%" id="mcps1.2.5.1.2"><p id="p52006120332"><a name="p52006120332"></a><a name="p52006120332"></a>是否必选</p>
     </th>
-    <th class="cellrowborder" valign="top" width="16.91830816918308%" id="mcps1.1.5.1.3"><p id="p4212501820332"><a name="p4212501820332"></a><a name="p4212501820332"></a>参数类型</p>
+    <th class="cellrowborder" valign="top" width="16.91830816918308%" id="mcps1.2.5.1.3"><p id="p4212501820332"><a name="p4212501820332"></a><a name="p4212501820332"></a>参数类型</p>
     </th>
-    <th class="cellrowborder" valign="top" width="36.27637236276372%" id="mcps1.1.5.1.4"><p id="p5668328720332"><a name="p5668328720332"></a><a name="p5668328720332"></a>说明</p>
+    <th class="cellrowborder" valign="top" width="36.27637236276372%" id="mcps1.2.5.1.4"><p id="p5668328720332"><a name="p5668328720332"></a><a name="p5668328720332"></a>说明</p>
     </th>
     </tr>
     </thead>
-    <tbody><tr id="row2794351620332"><td class="cellrowborder" valign="top" width="30.826917308269174%" headers="mcps1.1.5.1.1 "><p id="p4883233820332"><a name="p4883233820332"></a><a name="p4883233820332"></a>alarm_enabled</p>
+    <tbody><tr id="row2794351620332"><td class="cellrowborder" valign="top" width="30.826917308269174%" headers="mcps1.2.5.1.1 "><p id="p4883233820332"><a name="p4883233820332"></a><a name="p4883233820332"></a>alarm_enabled</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.978402159784022%" headers="mcps1.1.5.1.2 "><p id="p6310531220332"><a name="p6310531220332"></a><a name="p6310531220332"></a>是</p>
+    <td class="cellrowborder" valign="top" width="15.978402159784022%" headers="mcps1.2.5.1.2 "><p id="p6310531220332"><a name="p6310531220332"></a><a name="p6310531220332"></a>是</p>
     </td>
-    <td class="cellrowborder" valign="top" width="16.91830816918308%" headers="mcps1.1.5.1.3 "><p id="p1125668720332"><a name="p1125668720332"></a><a name="p1125668720332"></a>Boolean</p>
+    <td class="cellrowborder" valign="top" width="16.91830816918308%" headers="mcps1.2.5.1.3 "><p id="p1125668720332"><a name="p1125668720332"></a><a name="p1125668720332"></a>Boolean</p>
     </td>
-    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.1.5.1.4 "><p id="p3937648720332"><a name="p3937648720332"></a><a name="p3937648720332"></a>告警是否启用。</p>
+    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.2.5.1.4 "><p id="p3937648720332"><a name="p3937648720332"></a><a name="p3937648720332"></a>告警是否启用。</p>
     <p id="p26282199203644"><a name="p26282199203644"></a><a name="p26282199203644"></a>true：启动</p>
     <p id="p15074985203649"><a name="p15074985203649"></a><a name="p15074985203649"></a>false：停止</p>
     </td>
@@ -78,11 +80,8 @@
     }
     ```
 
-    >![](public_sys-resources/icon-note.gif) **说明：**   
-    >错误码说明请参见[返回错误码说明](返回错误码说明.md)。  
 
-
-## 响应<a name="section5063939020332"></a>
+## 响应消息<a name="section5063939020332"></a>
 
 无消息体
 
@@ -139,4 +138,8 @@
     </tbody>
     </table>
 
+
+## 错误码<a name="section18435153619467"></a>
+
+请参考[返回错误码说明](返回错误码说明.md)。
 
